--- a/docs/_layouts/cohortexStudy.html
+++ b/docs/_layouts/cohortexStudy.html
@@ -247,6 +247,83 @@ H3 {
 <script type="text/javascript">
 // <![CDATA[
 
+
+// ]]>
+</script>
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=313766222068236";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+<div class="post">
+    <h1>{{ page.title }} - {{ page.description }}</h1>
+	<h3>{{ page.summary }}</h3>
+    <em>
+    	Posted on <span class="date">{{ page.date | date_to_string }}</span> by <span class="author">{{ page.description }}</span>
+    </em>
+    <hr class="large" />
+	<div class="content">
+	<div style="padding-left: 8em;">
+		<!-- h2 style="margin-top: 0px; font-size: 108%;">
+			<label for="jsonInput">Input:</label>
+			<small id="jsonSize"></small>
+		</h2>
+		<textarea id="jsonInput"
+			rows="10" cols="50"
+			placeholder="Paste your JSON here"
+			spellcheck="false"
+			autofocus="autofocus">{{ content | strip_html }}</textarea -->
+		
+		<h2 style="font-size: 108%;">Study parameters:</h2>
+		<output
+			style="display: block;"
+			for="jsonInput cmdValidate"
+			id="jsonValidateOutput"></output>
+		<output
+			style="display: block;"
+			for="jsonInput jsonStrict jsonEval json2HTML json2JSON jsonTrunc jsonDate jsonData jsonSpace"
+			id="jsonOutput"></output>
+        <br/>
+        <h2 style="font-size: 108%;"> Parameters Schema: {{ page.schema }} </h2>
+        <script type="text/javascript" >    
+            var dataSchema="https://raw.githubusercontent.com/{{ site.github.repository_nwo }}/master/schemas/{{ page.schema }}.json";
+            var docsonFrame = "{{ site.baseurl }}/cohortexDocson/docson_frame.html";
+            document.write("<iframe id='" + dataSchema +
+                "' style='padding: 0; border: 0; width:100%; background: transparent' src='" +
+                docsonFrame + "#" + dataSchema + "'></iframe>");
+            function receiveMessage(event) {
+                console.log("<", event)
+                if (event.data.id && event.data.id == "docson") {
+                  var frame = document.getElementById(event.data.url);
+                  if(event.data.action == "resized") {
+                    frame.height = event.data.height + 18;
+                  }
+                  if(event.data.action == "ready") {
+                    console.log(frame.parentNode)
+                    frame.contentWindow.postMessage({ id: "docson", font: window.getComputedStyle(frame.parentNode).fontFamily}, "*");
+                  }
+                }
+
+            }
+            window.addEventListener("message", receiveMessage, false);
+        </script>
+        <br/>
+    </div>
+	</div>
+   <span class="meta">
+    	<small>By {{ site.author }} &copy; {{page.date | date: "%Y"}}</small>
+    </span>
+</div>
+<hr class="large"/>
+<div class="comments">
+    <h4>Comments</h4>
+    <div class="fb-comments" data-href="{{site.url}}{{page.url}}" data-width="470" data-num-posts="2"></div>
+</div>
+<script>
+$(document).ready(function(){
 var doc = document, win = window,
     $ = function(id) { return doc.getElementById(id); },
     $$ = function(sel) { return doc.getElementsByTagName(sel); },
@@ -353,78 +430,5 @@ function cmp(v1, v2){
   if (v1 == v2) return 0;
   return v1 > v2 ? 1 : -1;
 }
-
-// ]]>
+});
 </script>
-<div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=313766222068236";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
-<div class="post">
-    <h1>{{ page.title }} - {{ page.description }}</h1>
-	<h3>{{ page.summary }}</h3>
-    <em>
-    	Posted on <span class="date">{{ page.date | date_to_string }}</span> by <span class="author">{{ page.description }}</span>
-    </em>
-    <hr class="large" />
-	<div class="content">
-	<div style="padding-left: 8em;">
-		<!-- h2 style="margin-top: 0px; font-size: 108%;">
-			<label for="jsonInput">Input:</label>
-			<small id="jsonSize"></small>
-		</h2>
-		<textarea id="jsonInput"
-			rows="10" cols="50"
-			placeholder="Paste your JSON here"
-			spellcheck="false"
-			autofocus="autofocus">{{ content | strip_html }}</textarea -->
-		
-		<h2 style="font-size: 108%;">Study parameters:</h2>
-		<output
-			style="display: block;"
-			for="jsonInput cmdValidate"
-			id="jsonValidateOutput"></output>
-		<output
-			style="display: block;"
-			for="jsonInput jsonStrict jsonEval json2HTML json2JSON jsonTrunc jsonDate jsonData jsonSpace"
-			id="jsonOutput"></output>
-        <br/>
-        <h2 style="font-size: 108%;"> Parameters Schema: {{ page.schema }} </h2>
-        <script type="text/javascript" >    
-            var dataSchema="https://raw.githubusercontent.com/{{ site.github.repository_nwo }}/master/schemas/{{ page.schema }}.json";
-            var docsonFrame = "{{ site.baseurl }}/cohortexDocson/docson_frame.html";
-            document.write("<iframe id='" + dataSchema +
-                "' style='padding: 0; border: 0; width:100%; background: transparent' src='" +
-                docsonFrame + "#" + dataSchema + "'></iframe>");
-            function receiveMessage(event) {
-                console.log("<", event)
-                if (event.data.id && event.data.id == "docson") {
-                  var frame = document.getElementById(event.data.url);
-                  if(event.data.action == "resized") {
-                    frame.height = event.data.height + 18;
-                  }
-                  if(event.data.action == "ready") {
-                    console.log(frame.parentNode)
-                    frame.contentWindow.postMessage({ id: "docson", font: window.getComputedStyle(frame.parentNode).fontFamily}, "*");
-                  }
-                }
-
-            }
-            window.addEventListener("message", receiveMessage, false);
-        </script>
-        <br/>
-    </div>
-	</div>
-   <span class="meta">
-    	<small>By {{ site.author }} &copy; {{page.date | date: "%Y"}}</small>
-    </span>
-</div>
-<hr class="large"/>
-<div class="comments">
-    <h4>Comments</h4>
-    <div class="fb-comments" data-href="{{site.url}}{{page.url}}" data-width="470" data-num-posts="2"></div>
-</div>
