--- a/docs/_layouts/cohortexStudy.html
+++ b/docs/_layouts/cohortexStudy.html
@@ -1,6 +1,7 @@
 ---
 layout: stevDefault
 title: Study Page
+mainMenu: mainMenuBar.html
 ---
 <script>
     Stevenson.studyURL = "https://raw.githubusercontent.com/{{ site.github.repository_nwo }}/master/{{ page.studyPath }}";
