--- a/docs/_layouts/stevHome.html
+++ b/docs/_layouts/stevHome.html
@@ -4,13 +4,14 @@ layout: stevDefault
 
 <div class="container">
 	<div class="hero-unit">
-		<img src="{{ site.baseurl }}/stevImg/logo-largeCohortEx.png" title="CohortEx Logo" width="150" height="150" class="pull-left" />
-		<h1>CohortEx Parameters Editor</h1>
-		<h3>A parameters file editor for CohortEx: cohort extractor tool</h3>
+		<img src="{{ site.baseurl }}/stevImg/logo-large.png" title="Stevenson Logo" width="150" height="150" class="pull-left" />
+		<h1>Stevenson</h1>
+		<h3>A CMS for GitHub + Jekyll</h3>
 		<p>
-			CohortEx Parameters Editor is a tool to edit parameters stored in a file in a <a href="http://github.com/"
-				title="GitHub Home">GitHub</a> repository that define
-			the study to be run over a Paua model database.
+			Stevenson is a micro-CMS leveraging <a href="http://github.com/"
+				title="GitHub Home">GitHub</a> for storing the website content and
+			the <a href="http://jekyllrb.com/" title="Jekyll Home">Jekyll
+				templating engine</a> for templating and site configuration.
 		</p>
 		<p>
 			<a class="btn btn-primary btn-large" href="#" onclick="javascript:$('#login-modal').modal('show');">Sign Up / Login
@@ -19,12 +20,31 @@ layout: stevDefault
 	</div>
 	<div class="row">
 		<div class="span4">
-			<h2>Manage Your Study Through GitHub</h2>
+			<h2>Manage Your Site Through GitHub</h2>
 			<p>
-				Define the cohort parameters to extract and analyze patients from a Paua model.
+				Manage your blog or website entirely through GitHub and Stevenson.
+				Instead of dealing with a complicated backend.
 			</p>
 			<p>
-				<a href="{{ site.baseurl }}/about.html#GitHub" class="btn">Learn more &gt;</a>
+				<a href="{{ site.baseurl }}/stevAbout.html#GitHub" class="btn">Learn more &gt;</a>
+			</p>
+		</div>
+		<div class="span4">
+			<h2>No Coding Required</h2>
+			<p>
+				Create content using a HTML WYSIWYG or Markdown editor.
+			</p>
+			<p>
+				<a href="/about.html#NoCoding" class="btn">View details &gt;</a>
+			</p>
+		</div>
+		<div class="span4">
+			<h2>Simple CMS</h2>
+			<p>
+				Stevenson has everything you need from a CMS and nothing more.
+			</p>
+			<p>
+				<a href="/about.html#Simple" class="btn">View details &gt;</a>
 			</p>
 		</div>
 	</div>
