--- a/docs/_includes/cmsMenuBar.html
+++ b/docs/_includes/cmsMenuBar.html
@@ -15,7 +15,7 @@
 				<div class="nav-collapse collapse">
 					<ul class="nav">
 						<li><a href="{{ site.baseurl }}/">Home</a></li>
-						<li><a href="{{ site.baseurl }}/cms">Manage Studies/Posts</a></li>
+						<li><a href="{{ site.baseurl }}/cohortexCms/">Manage Studies/Posts</a></li>
 						<li><a href="{{ site.baseurl }}/cohortex_about.html">About</a></li>
 						<li><a href="{{ site.baseurl }}/documentation/">Documentation</a></li>
 					</ul>
