--- a/docs/_includes/mainMenuBar.html
+++ b/docs/_includes/mainMenuBar.html
@@ -15,9 +15,9 @@
 				<div class="nav-collapse collapse">
 					<ul class="nav">
 						<li><a href="{{ site.baseurl }}/">Home</a></li>
-						<li><a href="{{ site.baseurl }}/cms">Manage Studies/Posts</a></li>
+						<li><a href="{{ site.baseurl }}/cohortexCms/">Studies/Posts</a></li>
 						<li><a href="{{ site.baseurl }}/cohortex_about.html">About</a></li>
-						<li><a href="{{ site.baseurl }}/documentation/">Documentation</a></li>
+						<li><a href="{{ site.baseurl }}/cohortexDocumentation/">Documentation</a></li>
 					</ul>
 				</div>
 			</div>
