--- a/docs/_includes/cmsMenuBar.html
+++ b/docs/_includes/cmsMenuBar.html
@@ -15,6 +15,8 @@
 				<div class="nav-collapse collapse">
 					<ul class="nav">
 						<li><a href="{{ site.baseurl }}/">Home</a></li>
+						<li><a href="{{ site.baseurl }}/cohortexCms/?type=study">Edit Studies</a></li>
+						<li><a href="{{ site.baseurl }}/cohortexCms/?type=posts">Edit Posts</a></li>
 						<li><a href="{{ site.baseurl }}/cohortex_about.html">About</a></li>
 						<li><a href="{{ site.baseurl }}/documentation/">Documentation</a></li>
 					</ul>
