--- a/docs/_includes/filesStudiesMenuBar.html
+++ b/docs/_includes/filesStudiesMenuBar.html
@@ -16,7 +16,7 @@
 					<ul class="nav">
 						<li><a href="{{ site.baseurl }}/">Home</a></li>
 						<li><a href="javascript:void(0);" class="file-edit">Edit Study</a></li>
-						<li><a href="{{ site.baseurl }}/cohortexCms/?type=posts">Edit Posts</a></li>
+						<li><a href="{{ site.baseurl }}/cohortexCms/?type=post">Edit Posts</a></li>
 						<li><a href="{{ site.baseurl }}/cohortex_about.html">About</a></li>
 						<li><a href="{{ site.baseurl }}/documentation/">Documentation</a></li>
 					</ul>
