--- a/docs/_includes/filesStudiesMenuBar.html
+++ b/docs/_includes/filesStudiesMenuBar.html
@@ -15,8 +15,9 @@
 				<div class="nav-collapse collapse">
 					<ul class="nav">
 						<li><a href="{{ site.baseurl }}/">Home</a></li>
+						<li><a href="{{ site.baseurl }}/cohortexCms?type=study">Repositories</a></li>
 						<li><a href="javascript:void(0);" class="file-edit">Edit Study</a></li>
-						<li><a href="{{ site.baseurl }}/cohortexCms/?type=post">Edit Posts</a></li>
+						<li><a href="{{ site.baseurl }}/cohortexCms/cohortex_editStudy.html?type=post">Edit Posts</a></li>
 						<li><a href="{{ site.baseurl }}/cohortex_about.html">About</a></li>
 						<li><a href="{{ site.baseurl }}/documentation/">Documentation</a></li>
 					</ul>
