--- a/docs/_includes/mainMenuBar.html
+++ b/docs/_includes/mainMenuBar.html
@@ -15,6 +15,7 @@
 				<div class="nav-collapse collapse">
 					<ul class="nav">
 						<li><a href="{{ site.baseurl }}/">Home</a></li>
+						<li><a href="{{ site.baseurl }}/cohortexCms?type=study">Repositories</a></li>
 						<li><a href="{{ site.baseurl }}/cohortexCms/?type=study">Edit Studies</a></li>
 						<li><a href="{{ site.baseurl }}/cohortexCms/?type=posts">Edit Posts</a></li>
 						<li><a href="{{ site.baseurl }}/blog">Blog</a></li>
