--- a/docs/_includes/filesPostsMenuBar.html
+++ b/docs/_includes/filesPostsMenuBar.html
@@ -16,7 +16,7 @@
 					<ul class="nav">
 						<li><a href="{{ site.baseurl }}/">Home</a></li>
 						<li><a href="{{ site.baseurl }}/cohortexCms?type=study">Repositories</a></li>
-						<li><a href="{{ site.baseurl }}/cohortexCms/cohortex_siteStudies.html?type=study">Edit Studies</a></li>
+						<li><a href="{{ site.baseurl }}/cohortexCms/cohortex_siteStudies.html#studies?type=study">Edit Studies</a></li>
 						<li><a href="javascript:void(0);" class="file-edit">Edit Post</a></li>
 						<li><a href="{{ site.baseurl }}/cohortex_about.html">About</a></li>
 						<li><a href="{{ site.baseurl }}/documentation/">Documentation</a></li>
