--- a/docs/_includes/mainMenuBar.html
+++ b/docs/_includes/mainMenuBar.html
@@ -16,8 +16,10 @@
 					<ul class="nav">
 						<li><a href="{{ site.baseurl }}/">Home</a></li>
 						<li><a href="{{ site.baseurl }}/cohortexCms?type=study">Repositories</a></li>
-						<li><a href="{{ site.baseurl }}/cohortexCms/?type=study">Edit Studies</a></li>
-						<li><a href="{{ site.baseurl }}/cohortexCms/?type=posts">Edit Posts</a></li>
+						<!-- li><a href="{{ site.baseurl }}/cohortexCms/?type=study">Edit Studies</a></li -->
+						<li><a href="{{ site.baseurl }}/cohortexCms/cohortex_siteStudies.html#studies">Edit Studies</a></li>
+						<!-- li><a href="{{ site.baseurl }}/cohortexCms/?type=posts">Edit Posts</a></li -->
+						<li><a href="{{ site.baseurl }}/cohortexCms/cohortex_sitePosts.html#docs/_posts">Edit Posts</a></li>
 						<li><a href="{{ site.baseurl }}/blog">Blog</a></li>
 						<li><a href="{{ site.baseurl }}/cohortex_about.html">About</a></li>
 						<li><a href="{{ site.baseurl }}/cohortexDocumentation/">Documentation</a></li>
